--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,29 +9,113 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+    <TextView android:text="Username" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/user_name"
+        android:layout_marginTop="53dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/user_name_et"
+        android:layout_alignStart="@+id/user_name_et" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:id="@+id/editText"
+        android:layout_marginTop="5dp"
+        android:id="@+id/user_name_et"
         android:background="@android:drawable/edit_text"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="38dp"
-        android:layout_marginTop="47dp" />
+        android:layout_below="@+id/user_name"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Password"
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_name_et"
+        android:layout_alignLeft="@+id/password_et"
+        android:layout_alignStart="@+id/password_et"
+        android:layout_marginTop="140dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:drawable/edit_text"
-        android:inputType="textPostalAddress"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_marginTop="42dp" />
+        android:id="@+id/password_et"
+        android:layout_marginTop="39dp"
+        android:layout_below="@+id/user_name_et"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:text="Name"
+        android:id="@+id/name_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/name_et"
+        android:layout_alignStart="@+id/name_et"
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/password_et"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/edit_text"
+        android:ems="10"
+        android:id="@+id/name_et"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:text="Mobile"
+        android:id="@+id/number_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/number_et"
+        android:layout_alignStart="@+id/number_et"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/name_et"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/edit_text"
+        android:ems="10"
+        android:layout_marginTop="4dp"
+        android:inputType="number"
+        android:id="@+id/number_et"
+        android:layout_below="@+id/number_text_view"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:text="Address"
+        android:id="@+id/address_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/address_et"
+        android:layout_alignStart="@+id/address_et"
+        android:layout_marginTop="60dp"
+        android:layout_below="@+id/number_text_view"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/edit_text"
+        android:ems="10"
+        android:id="@+id/address_et"
+        android:layout_below="@+id/number_et"
+        android:layout_alignLeft="@+id/number_et"
+        android:layout_alignStart="@+id/number_et"
+        android:layout_marginTop="32dp" />
+    <Button
+        android:text="Continue"
+        android:id="@+id/send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/address_et"
+        android:layout_toRightOf="@+id/name_text_view"
+        android:layout_toEndOf="@+id/name_text_view" />
 </RelativeLayout>
