--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,6 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:background="#CCFFE6"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
     <TextView
@@ -81,12 +82,13 @@
         android:layout_alignStart="@+id/number_et" />
     <Button
         android:text="Continue"
-        android:textColor="#000"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button_theme"
         android:id="@+id/continue_button"
+        android:layout_marginTop="40dp"
         android:layout_width="120dp"
         android:layout_height="60dp"
         android:layout_below="@+id/address_et"
-        android:layout_toRightOf="@+id/number_text_view"
-        android:layout_toEndOf="@+id/number_text_view"
-        android:layout_marginTop="45dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
