--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:background="#CCFFE6"
+    android:background="#7F7FFF"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
 
     <TextView
@@ -34,30 +34,7 @@
         android:layout_marginTop="6dp"
         android:layout_alignLeft="@+id/address_et"
         android:layout_alignStart="@+id/address_et" />
-    <TextView
-        android:text="Mobile"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:id="@+id/number_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/number_et"
-        android:layout_alignStart="@+id/number_et"
-        android:layout_marginTop="18dp"
-        android:layout_below="@+id/name_et"
-        android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:drawable/edit_text"
-        android:ems="12"
-        android:layout_marginTop="6dp"
-        android:inputType="number"
-        android:id="@+id/number_et"
-        android:layout_below="@+id/number_text_view"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
     <TextView
         android:text="Address"
         android:textColor="#000"
