--- a/app/src/main/res/layout/order_activity.xml
+++ b/app/src/main/res/layout/order_activity.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCFFE6"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="#7F7FFF">
 
     <TextView
         android:text="What do you want"
