--- a/app/src/main/res/drawable/button_theme.xml
+++ b/app/src/main/res/drawable/button_theme.xml
@@ -17,9 +17,9 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="8dp" />
-            <stroke android:width="1dip" android:color="@color/colorPrimary" />
-            <gradient android:angle="-90" android:startColor="@color/colorPrimary"
-                android:endColor="@color/colorPrimary" />
+            <stroke android:width="1dip" android:color="@color/red" />
+            <gradient android:angle="-90" android:startColor="@color/red"
+                android:endColor="@color/red" />
         </shape>
     </item>
 </selector>
