--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -101,7 +101,8 @@
         android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/imageView2"
+        android:layout_marginTop="5dp"
+        android:layout_below="@+id/mobile_editText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
