--- a/app/src/main/res/layout/pre_activity_layout.xml
+++ b/app/src/main/res/layout/pre_activity_layout.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF" >
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/background_design"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <RelativeLayout
         android:clickable="true"
@@ -9,11 +19,11 @@
         android:background="@drawable/button_theme"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:layout_alignParentTop="true"
         android:padding="10dp"
-        android:layout_alignRight="@+id/custom_super_market_button"
-        android:layout_alignEnd="@+id/custom_super_market_button">
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/imageView"
+        android:layout_alignLeft="@+id/custom_super_market_button"
+        android:layout_alignStart="@+id/custom_super_market_button">
         <TextView
             android:id="@+id/snacks"
             android:layout_alignParentLeft="true"
@@ -41,10 +51,10 @@
         android:background="@drawable/button_theme"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:padding="10dp"
         android:layout_below="@+id/snack_custom_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="155dp">
+        android:layout_centerHorizontal="true">
         <TextView
             android:id="@+id/super_market"
             android:layout_alignParentLeft="true"
@@ -67,4 +77,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:background="@drawable/bike"
+        android:id="@+id/imageView2"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
