--- a/app/src/main/res/layout/single_grid.xml
+++ b/app/src/main/res/layout/single_grid.xml
@@ -4,9 +4,9 @@
 
     <ImageView
         android:id="@+id/grid_image"
-        android:padding="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:padding="0dp"
+        android:layout_width="120dp"
+        android:layout_height="90dp">
     </ImageView>
 
 </LinearLayout>
