add notes and align in layout

--- a/app/src/main/res/layout/activity_products_detail.xml
+++ b/app/src/main/res/layout/activity_products_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -8,6 +8,51 @@
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_width="match_parent"
+        android:layout_marginBottom="30dp" />
 
-</LinearLayout>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_gravity="center"
+        android:background="#ED1C24"
+        android:layout_alignBottom="@+id/lvExp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/note"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=" * All cocktails contain same fruit slices w/different juices inside "
+            android:textColor="#ED1C24"
+            android:typeface="serif"
+            android:textSize="8dp"
+            android:layout_margin="1dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/note2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=" * With toppings of Achta , fresh almonds and honey or whipped cream"
+            android:textColor="#ED1C24"
+            android:typeface="serif"
+            android:textStyle="bold"
+            android:textSize="8dp"
+            android:layout_margin="1dp"
+            android:layout_below="@id/note"
+            />
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
