--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -17,7 +17,7 @@
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textStyle="italic"
         android:layout_below="@+id/product_name"
         android:layout_centerHorizontal="true" />
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
+        android:layout_marginRight="8dp"
         android:layout_alignBottom="@+id/price"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
