--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -7,6 +7,7 @@
     android:background="#E6E6E6">
 
     <RelativeLayout
+        android:id="@+id/cart_layout"
         android:layout_width="fill_parent"
         android:layout_height="45dp" >
 
@@ -39,7 +40,6 @@
             android:layout_below="@+id/item_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Shipping:"
             android:textColor="#474747"
             android:textSize="14dp"
             android:layout_marginTop="2dp"
@@ -51,7 +51,6 @@
             android:layout_alignTop="@+id/shipping_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rs.50"
             android:textColor="#474747"
             android:textSize="14dp"
             android:layout_marginLeft="5dp"/>
@@ -59,18 +58,17 @@
 
         <TextView
             android:id="@+id/total_amount"
-            android:layout_toLeftOf="@+id/checkout"
+            android:layout_toLeftOf="@+id/check_out"
             android:layout_alignParentTop="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Rs. 5700"
             android:textColor="#000000"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginTop="12dp"
             android:layout_marginRight="10dp"/>
 
         <Button
-            android:id="@+id/checkout"
+            android:id="@+id/check_out"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
             android:layout_alignParentBottom="true"
@@ -83,19 +81,8 @@
             android:text="Checkout >>"
             android:textSize="16dp" />
 
-
-        <TextView
-            android:id="@+id/cart_empty"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CART IS EMPTY"
-            android:textColor="#474747"
-            android:textSize="20dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="50dp"/>
     </RelativeLayout>
+
 
     <View
         android:id="@+id/view1"
@@ -106,7 +93,7 @@
         android:background="#BABABA" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@+id/list_view_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF"
