--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -34,7 +34,6 @@
             android:layout_marginTop="4dp"
             android:layout_marginLeft="5dp"/>
 
-
         <TextView
             android:id="@+id/total_amount"
             android:layout_width="wrap_content"
@@ -62,7 +61,7 @@
 
     </RelativeLayout>
     <View
-        android:id="@+id/view1"
+        android:id="@+id/viewLine"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_alignParentLeft="true"
